--- a/info.html
+++ b/info.html
@@ -1,41 +1,75 @@
 <!DOCTYPE html>
-
-<html lang="nl">
-
+<html>
 <head>
-  <link rel="stylesheet" href="style.css" />
-  <title>Dit is een eenvoudige website</title>
-  <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <title>Rocket League</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
-  <div class="page">
+  <div class="container">
+    <div class="navbar">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Gaming.html">Auto's</a></li>
+          <li><a href="Vrienden.html">Gamemodes</a></li>
+          <li><a href="info.html">Pro players</a></li>
+          
+        </ul>
+    </div>
 
-    <header>
-      <h1>Informatie overal!</h1>
-    </header>
+    <div class="content">
+      <h1>Royalistiq</h1>
+        <p><p  id="click-me"><img class="fotodrink" src="afbeeldingen/focusdrink.png"</p>Royalist is een term die vaak wordt gebruikt om een persoon of groep te beschrijven die trouw is aan een monarchie, koning, koningin of soeverein staatshoofd. Het begrip "royalist" kan variëren in betekenis en connotatie, afhankelijk van de historische context, politieke omstandigheden en het land waarin het wordt gebruikt. In dit artikel zullen we de betekenis, geschiedenis en de rol van royalisten in verschillende tijdsperiodes en plaatsen verkennen.
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a class="active" href="info.html">Informatie</a></li>
-      </ul>
-    </nav>
+        **De Betekenis van Royalist**
 
-    <main>
-      <p>Informatie (van Latijn informare: "vormgeven, vormen, instrueren") is alles wat kennis toevoegt en zo
-        onwetendheid, onzekerheid of onbepaaldheid vermindert. Strikt genomen is informatie pas informatie als die
-        interpreteerbaar is. Interpreteren en integreren van informatie resulteert in kennis. Er verschenen in de loop
-        van de tijd honderden definities van het begrip. Dit komt doordat een aantal (sub)wetenschappen en
-        toepassingsgebieden het verschillend gebruiken. Informatie wordt overgedragen via communicatie. Wie een
-        boodschap overdraagt is de zender en wie de boodschap ontvangt is de ontvanger. Meestal is er
-        tweerichtingsverkeer.</p>
-    </main>
+        Het woord "royalist" is afgeleid van het Engelse woord "royal," wat verwijst naar iets dat verband houdt met koningen, koninginnen of royalty. Een royalist is iemand die loyaal en toegewijd is aan de monarchie en het koninklijk gezag. Royalisten geloven meestal in de waarde en het belang van een erfelijke heerschappij, waarbij het staatshoofd wordt bepaald door geboorte en bloedlijn, in plaats van door verkiezingen of andere vormen van regeringsvorm.
+
+        Het concept van royalisme kan echter in verschillende contexten verschillende connotaties hebben. In sommige gevallen worden royalisten gezien als conservatieve, behoudende krachten die de status quo en traditionele waarden willen behouden. Aan de andere kant kunnen royalisten ook worden beschouwd als patriottische burgers die hun land en geschiedenis eren door loyaal te zijn aan de monarchie.
+
+        **Geschiedenis van Royalisten**
+
+        Royalisten zijn er in de loop van de geschiedenis in verschillende vormen en onder verschillende benamingen geweest. Hier zijn enkele belangrijke periodes en gebeurtenissen waarin royalisten een rol hebben gespeeld:
+
+        1. **Engelse Burgeroorlog (1642-1651):** Tijdens de Engelse Burgeroorlog stonden de royalisten, ook wel bekend als de Cavaliers, aan de kant van koning Karel I van Engeland. Ze streden tegen de parlementariërs, die voor het Parlement waren en zich verzetten tegen het absolutisme van de koning. De burgeroorlog eindigde met de overwinning van de parlementariërs en de tijdelijke afschaffing van de Engelse monarchie.
+
+        2. **Franse Revolutie (1789-1799):** In Frankrijk werden royalisten tijdens de Franse Revolutie geconfronteerd met de revolutionaire krachten die de monarchie omverwierpen en de Franse Republiek stichtten. Na de executie van koning Lodewijk XVI in 1793 bleven royalisten strijden voor de restauratie van de monarchie. Dit leidde tot de opkomst van de Bourbon-restauratie en de restauratie van de Franse monarchie in de vroege 19e eeuw.
+
+        3. **Heden:** Tegenwoordig zijn er nog steeds landen met een constitutionele monarchie, waarin royalisten bestaan en loyaal zijn aan hun koninklijke familie. Ze kunnen betrokken zijn bij koninklijke evenementen, steun betuigen aan hun koning of koningin en de monarchie als een symbool van nationale eenheid en traditie beschouwen.
+
+        **Rol van Royalisten in de Moderne Samenleving**
+
+        In veel moderne samenlevingen hebben royalisten een symbolische rol bij officiële koninklijke evenementen en ceremonies. Ze kunnen koninklijke huwelijken, kroningen, staatsbezoeken en andere koninklijke aangelegenheden bijwonen om hun steun aan het koninklijk huis te uiten.
+
+        Royalisten kunnen ook fungeren als bewaarders van de nationale geschiedenis en culturele erfgoed. Ze kunnen de monarchie beschouwen als een belangrijk onderdeel van de nationale identiteit en traditie, en werken aan het behoud van historische koninklijke paleizen, kunstwerken en archieven.
+
+        Bovendien kunnen royalisten een rol spelen in maatschappelijke discussies over de toekomst van de monarchie. Ze kunnen pleiten voor het behoud en de versterking van de koninklijke instelling, of ze kunnen deel uitmaken van een debat over de rol van de monarchie in de moderne democratie.
+
+        **Verschillende Opvattingen over Royalisme**
+
+        Het begrip royalisme kan verschillende betekenissen hebben voor verschillende mensen en in verschillende landen. Sommigen beschouwen royalisme als een eerbetoon aan traditie, geschiedenis en nationale identiteit. Anderen kunnen het als een achterhaalde en ondemocratische opvatting beschouwen, in strijd met de principes van gelijkheid en representatieve regering.
+
+        In sommige gevallen kan het debat over royalisme leiden tot politieke verdeeldheid en discussies over de toekomst van de monarchie. Sommige landen hebben ervoor gekozen om hun koninklijke families te behouden en te eren, terwijl andere hebben gekozen voor een republikeinse vorm van regering.
+
+        **Conclusie**
+
+        Royalisten zijn individuen of groepen die trouw zijn aan de monarchie en koninklijk gezag. De betekenis en rol van royalisten variëren afhankelijk van historische context en politieke omstandigheden. Ze hebben een rol gespeeld in belangrijke periodes van de geschiedenis, zoals de Engelse Burgeroorlog en de Franse Revolutie, en blijven tegenwoordig actief in constitutionele monarchieën. Het debat over royalisme is nog steeds relevant en kan leiden tot discussies over de rol van de monarchie in moderne samenlevingen.</p>
+    </div>
+  </div>
+    
+
+
+    <audio id="my-audio">
+        <source src="Roy.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
+    <script src="script.js"></script>
+</body>
 
     <footer>
       <hr />
-      <p class="smalltext">--jouw school-- --jaartal--</p>
+      <p class="smalltext">--emmauscollege-- --2023--</p>
     </footer>
 
   </div>
